--- a/src/index.css
+++ b/src/index.css
@@ -62,10 +62,10 @@
 body {
   font-family: "LamaSans", sans-serif;
   background-color: #d0cfb0;
-  background-image: url("/bg.jpg");
-  background-position: 100% 100%;
-  background-size: cover;
-  background-repeat: no-repeat;
+  background-image: url("/pattern.svg"), url("/pattern-2.svg"), url("/bg.jpg");
+  background-position: 0% calc(100% - 1rem), -128px -128px, 0% 0%;
+  background-size: auto 3rem, 512px, cover;
+  background-repeat: repeat-x, no-repeat, no-repeat;
   min-height: 100vh;
 
   @apply text-accent;
