--- a/src/index.css
+++ b/src/index.css
@@ -64,9 +64,18 @@
 body {
   font-family: "LamaSans", sans-serif;
   background-color: theme("--color-neutral");
-  background-image: url("/pattern.svg"), url("/pattern-2.svg"), url("/logo.png"), url("/bg.jpg");
-  background-position: 0% calc(100% - 1rem), -128px -128px, 96% 4%, 0% 0%;
-  background-size: auto 3rem, 512px, 256px, cover;
+  background-image:
+    url("/pattern.svg"), url("/pattern-2.svg"), url("/logo.png"), url("/bg.jpg");
+  background-position:
+    0% calc(100% - 1rem),
+    -128px -128px,
+    96% 4%,
+    0% 0%;
+  background-size:
+    auto 3rem,
+    512px,
+    256px,
+    cover;
   background-repeat: repeat-x, no-repeat, no-repeat, no-repeat;
   min-height: 100vh;
 
