--- a/src/index.css
+++ b/src/index.css
@@ -83,7 +83,7 @@ body {
 }
 
 button {
-  @apply inline-flex items-center justify-center px-6 py-3 font-semibold cursor-pointer rounded-lg transition-all duration-150 transform active:translate-y-1 focus:outline-none;
+  @apply inline-flex gap-4 items-center justify-center px-6 py-3 font-semibold cursor-pointer rounded-lg transition-all duration-150 transform active:translate-y-1 focus:outline-none;
 }
 
 button.primary {
